YAMLs/DEV/Ingress/aks-loadtest-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: aks-loadtest-ingress
  namespace: aks-loadtest-dev
  annotations:    
    kubernetes.io/ingress.class: nginx    
    nginx.ingress.kubernetes.io/rewrite-target: /$1    
    nginx.ingress.kubernetes.io/enable-cors: "true"       
spec:  
  rules:    
  - http:
      paths:
      - path: /?(.*)
        backend:
          serviceName: nginx-cache-svc
          servicePort: 80
